--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -22,11 +22,8 @@ block content
             overlay: false
           })
         section
-          .style-letter-head M
-          | y name is Olaoluwa (if you’re trying to pronounce it, the trick is to take it 3 letters at a time). You might have noticed the name on the site is not Olaoluwa, the reason is that Joseph is a lot easier to say. 
-          br
-          br
-          | As the eldest of 4 children, I have picked up on several skills and philosophies including a natural inclination for leadership, a keen sense of responsibility, a strong ability to maintain peaceful interactions, and the continuous need to improve myself and surroundings. Interestingly, a recent professional development assessment (developed by Plum.io) places adaptation, teamwork, conflict resolution and innovation as some of my top talents. This, and many other projects I have led or collaborated on are also evidences of the skilled I have accrued thus far.
+          .style-letter-head A
+          | s the eldest of 4 children, I have picked up on several skills and philosophies including a natural inclination for leadership, a keen sense of responsibility, a strong ability to maintain peaceful interactions, and the continuous need to improve myself and surroundings. Interestingly, a recent professional development assessment (developed by Plum.io) places adaptation, teamwork, conflict resolution and innovation as some of my top talents. This, and many other projects I have led or collaborated on are also evidences of the skilled I have accrued thus far.
           br
           br
           | I have been quite fortunate in my educational career, graduating with a High Distinction from Ontario Tech University in a Mechanical (specifically Mechatronics) Engineering program. I am currently working towards my master’s degree under the supervision of two of the best at Ontario Tech University, Drs. 
