--- a/src/pug/pages/projects/phoenix.pug
+++ b/src/pug/pages/projects/phoenix.pug
@@ -40,4 +40,4 @@ block content
     })(width="860px" height="540px")
 
   //- Next page layer
-  +next-page("/projects/publications", "Publications")
+  +next-page("Ultima Apparel", "Publications")
