--- a/src/pug/pages/projects/publications.pug
+++ b/src/pug/pages/projects/publications.pug
@@ -31,4 +31,4 @@ block content
         +link("http://www.cnki.com.cn/Article/CJFDTOTAL-YQBE201901007.htm") http://www.cnki.com.cn/Article/CJFDTOTAL-YQBE201901007.htm
 
   //- Next page layer
-  +next-page("/projects/boxer", "Boxer")
+  +next-page("Phoenix", "Boxer")
