--- a/src/pug/pages/projects/sarbot.pug
+++ b/src/pug/pages/projects/sarbot.pug
@@ -65,4 +65,4 @@ block content
       figcaption.italic Video displaying the capabilities of the final design of SarBot
 
   //- Next page layer
-  +next-page("/projects/ultima-apparel", "Ultima Apparel")
+  +next-page("Battery Manager", "Ultima Apparel")
