--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -12,9 +12,8 @@ block banner
 
 
 block content
-  //- Intro layer
   .container-lg
-    h3.layer-title Hi, I’m Olaoluwa, but people call me Joseph.  
+    h3.layer-title Hi, I’m Olaoluwa [Joseph]
     | For about a decade now, I have actively sought to leave the state of things better than I found it. I am a Mechatronics engineer at heart and on paper. I integrate hardware and software into harmonious alliance to solve societal pain points.
 
     br
