--- a/src/pug/pages/projects/battery-manager.pug
+++ b/src/pug/pages/projects/battery-manager.pug
@@ -68,5 +68,5 @@ block content
     |  Although a lot of work has gone into this project, there is still more to do to improve user experience. It is my goal to improve it further and support others that might need to use or improve on it.
 
   //- Next page layer
-  +next-page("/projects/sarbot", "Search and Rescue Robot (SarBot)")
+  +next-page("Boxer", "SarBot")
 
