--- a/src/pug/pages/projects/boxer.pug
+++ b/src/pug/pages/projects/boxer.pug
@@ -51,6 +51,13 @@ block content
     br
     br
     | This work is still a work in progress, but I will update it periodically.
+    br
+    br
+    figure.text-center
+      video.w-full(controls name='media')
+        source(src='https://res.cloudinary.com/okikio-assets/video/upload/v1623362278/joseph-projects/boxer/Boxer_Moving.mp4' type='video/mp4')
+
+      figcaption.italic Boxer on the move
 
   //- Next page layer
-  +next-page("/projects/battery-manager", "Battery Manager")
+  +next-page("Publications", "Battery Manager")
