chore: update footer

--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -16,4 +16,4 @@ mixin footer
 
       #design-by
         | Designed by 
-        +link("https://github.com/okikio") Okiki Ojo
+        +link("https://okikio.dev") Okiki Ojo
