--- a/src/pug/components/image.pug
+++ b/src/pug/components/image.pug
@@ -10,7 +10,7 @@ mixin image(value = {})
 
     let cloudinaryTest = /^cloudinary\//.test(src);
     let origin = `https://res.cloudinary.com/okikio-assets/image/${external ? "fetch" : "upload"}/`;
-    let urlParse = (filters = "w_auto") => cloudinaryTest ? `${origin + "f_auto,q_auto/c_fit," + filters},dpr_auto/${src.replace(/^cloudinary\//, "")}` : src;
+    let urlParse = (filters = "w_auto") => cloudinaryTest ? `${origin + "f_auto,q_auto:best/c_fit," + filters},dpr_auto/${src.replace(/^cloudinary\//, "")}` : src;
 
   .image&attributes(attributes)
     figure(class=_class title=alt)
