--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -68,6 +68,10 @@ html(lang="en")
 
     script(src="/js/legacy.min.js", nomodule async)
     script(src="/js/modern.min.js", type="module" async)
+    
+    // Global site tag (gtag.js) - Google Analytics
+    script(src='https://www.googletagmanager.com/gtag/js?id=G-235NHS61W0' async)
+    script(src='/js/measurements.min.js' async)
 
     script(type="application/ld+json").
       {
