--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -70,8 +70,8 @@ html(lang="en")
     script(src="/js/modern.min.js", type="module" async)
     
     // Global site tag (gtag.js) - Google Analytics
-    script(src='https://www.googletagmanager.com/gtag/js?id=G-235NHS61W0' async)
-    script(src='/js/measurements.min.js' async)
+    script(src='https://www.googletagmanager.com/gtag/js?id=G-235NHS61W0' defer)
+    script(src='/js/measurements.min.js' defer)
 
     script(type="application/ld+json").
       {
