--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -32,7 +32,7 @@ html(lang="en")
       let defaults = {
         url: "/",
         websiteURL: "https://josephojo.com",
-        title: "Joseph Ojo — A Mechatronics Engineers Portfolio",
+        title: "Joseph Ojo — A Mechatronics Engineer's Portfolio",
         description: "I'm Joseph Ojo, a skilled Mechatronics Engineer based in Oshawa, Canada. This is my portfolio site, it holds my resume and ways to contact me."
       };
 
