fix cloudinary bug

--- a/src/pug/pages/projects/boxer.pug
+++ b/src/pug/pages/projects/boxer.pug
@@ -42,8 +42,8 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls name='media')
-        source(src='https://res.cloudinary.com/okikio-assets/video/upload/v1623196482/joseph-projects/boxer/WheelAssembly_Edit.mp4' type='video/mp4')
+      video.w-full(controls name='media' loading="lazy")
+        source(src='https://res.cloudinary.com/okikio-assets/video/upload/f_auto,q_auto/v1623196482/joseph-projects/boxer/WheelAssembly_Edit.mp4' type='video/mp4')
 
       figcaption.italic Vehicle Wheel Assembly
     br
@@ -54,8 +54,8 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls name='media')
-        source(src='https://res.cloudinary.com/okikio-assets/video/upload/v1623362278/joseph-projects/boxer/Boxer_Moving.mp4' type='video/mp4')
+      video.w-full(controls name='media' loading="lazy")
+        source(src='https://res.cloudinary.com/okikio-assets/video/upload/f_auto,q_auto/v1623362278/joseph-projects/boxer/Boxer_Moving.mp4' type='video/mp4')
 
       figcaption.italic Boxer on the move
 
