--- a/src/pug/pages/projects/ultima-apparel.pug
+++ b/src/pug/pages/projects/ultima-apparel.pug
@@ -41,7 +41,7 @@ block content
     br
     figure.text-center
       video.mx-auto(controls name='media' width="640px")
-        source(src='https://res.cloudinary.com/okikio-assets/image/upload/joseph-projects/ultima-apparel/00_-_Pres_Video.mp4' type='video/mp4')
+        source(src='https://res.cloudinary.com/okikio-assets/image/upload/f_auto,q_auto/joseph-projects/ultima-apparel/00_-_Pres_Video.mp4' type='video/mp4')
 
       figcaption.italic Video of MoCap for material handling
     br
@@ -65,8 +65,8 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls name='media')
-        source(src='https://res.cloudinary.com/okikio-assets/video/upload/joseph-projects/ultima-apparel/PostureAnalysis.mp4' type='video/mp4')
+      video.w-full(controls name='media' loading="lazy")
+        source(src='https://res.cloudinary.com/okikio-assets/video/upload/f_auto,q_auto/joseph-projects/ultima-apparel/PostureAnalysis.mp4' type='video/mp4')
 
       figcaption.italic Prototype Software
     br
@@ -74,8 +74,8 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls name='media')
-        source(src='https://res.cloudinary.com/okikio-assets/video/upload/v1623195437/joseph-projects/ultima-apparel/MoCapLimitedTest.mp4' type='video/mp4')
+      video.w-full(controls name='media' loading="lazy")
+        source(src='https://res.cloudinary.com/okikio-assets/video/upload/f_auto,q_auto/v1623195437/joseph-projects/ultima-apparel/MoCapLimitedTest.mp4' type='video/mp4')
 
       figcaption.italic MoCap Development
 
