--- a/src/pug/pages/projects/sarbot.pug
+++ b/src/pug/pages/projects/sarbot.pug
@@ -59,8 +59,8 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls name='media')
-        source(src='https://res.cloudinary.com/okikio-assets/video/upload/v1618904172/joseph-projects/sarbot/Joseph_s_Trimmed_Video.mp4' type='video/mp4')
+      video.w-full(controls name='media' loading="lazy")
+        source(src='https://res.cloudinary.com/okikio-assets/video/upload/f_auto/v1618904172/joseph-projects/sarbot/Joseph_s_Trimmed_Video.mp4' type='video/mp4')
 
       figcaption.italic Video displaying the capabilities of the final design of SarBot
 
