--- a/src/pug/pages/projects/ultima-apparel.pug
+++ b/src/pug/pages/projects/ultima-apparel.pug
@@ -40,7 +40,7 @@ block content
     })(width="640px" height="856px")
     br
     figure.text-center
-      video.mx-auto(controls name='media' width="640px")
+      video.mx-auto(controls preload="none" name='media' width="640px")
         source(src='https://res.cloudinary.com/okikio-assets/image/upload/f_auto,q_auto/joseph-projects/ultima-apparel/00_-_Pres_Video.mp4' type='video/mp4')
 
       figcaption.italic Video of MoCap for material handling
@@ -65,7 +65,7 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls name='media' loading="lazy")
+      video.w-full(controls preload="none" name='media' loading="lazy")
         source(src='https://res.cloudinary.com/okikio-assets/video/upload/f_auto,q_auto/joseph-projects/ultima-apparel/PostureAnalysis.mp4' type='video/mp4')
 
       figcaption.italic Prototype Software
@@ -74,7 +74,7 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls name='media' loading="lazy")
+      video.w-full(controls preload="none" name='media' loading="lazy")
         source(src='https://res.cloudinary.com/okikio-assets/video/upload/f_auto,q_auto/v1623195437/joseph-projects/ultima-apparel/MoCapLimitedTest.mp4' type='video/mp4')
 
       figcaption.italic MoCap Development
