--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -20,10 +20,10 @@ html(lang="en")
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
 
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin)
-    link(rel="stylesheet" href="/css/app.min.css")
+    link(rel="stylesheet" href="/css/app.min.css" async)
 
     noscript
-      link(rel="stylesheet" href="/css/no-script.min.css")
+      link(rel="stylesheet" href="/css/no-script.min.css" async)
 
     link(rel="manifest", href="/manifest.json")
     link(type="text/plain" rel="author" href="/humans.txt")
@@ -70,10 +70,10 @@ html(lang="en")
     script(src="/js/modern.min.js", type="module" async)
     
     // Global site tag (gtag.js) - Google Analytics
-    script(src='https://www.googletagmanager.com/gtag/js?id=G-235NHS61W0')
-    script(src='/js/measurements.min.js')
+    script(src='https://www.googletagmanager.com/gtag/js?id=G-235NHS61W0' defer)
+    script(src='/js/measurements.min.js' defer)
 
-    script(type="application/ld+json").
+    script(type="application/ld+json" defer).
       {
         "@context": "https://schema.org",
         "@graph": [
