--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,4 +1,7 @@
 mixin footer
+  .cookie-banner
+    .container 
+      p This website uses cookies for Analytics.
   .footer
     .container
       #copyright
