--- a/src/pug/components/tile.pug
+++ b/src/pug/components/tile.pug
@@ -8,7 +8,7 @@ mixin tile(value = {})
 
     .tile-content
       if title
-        .tile-title.font-600= title
+        .tile-title.font-600.flex-grow= title
 
       if content
         p= content
