--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -57,7 +57,8 @@ block content
           +link("/projects/boxer")
             +tile({
               title: "Boxer",
-              class: "layer-box layer-surface block layer-tile-outline",
+              content: "Boxer is a robotic platform designed as an autonomous delivery vehicle and built for research purposes.",
+              class: "layer-box layer-surface block layer-tile-outline tile-slidable",
               image: {
                 src: "cloudinary/joseph-projects/boxer/03_ADR_Render_04",
                 alt: "An image of a rendered robot."
@@ -68,7 +69,8 @@ block content
           +link("/projects/battery-manager")
             +tile({
               title: "Battery Manager",
-              class: "layer-box layer-surface block layer-tile-outline",
+              content: "The battery manager is a testing tool built to perform a multitude of experiments on battery cells and packs of different sizes.",
+              class: "layer-box layer-surface block layer-tile-outline tile-slidable",
               image: {
                 src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
                 alt: "An image of the battery testing workstation box.",
@@ -79,7 +81,8 @@ block content
           +link("/projects/sarbot")
             +tile({
               title: "Search and Rescue Robot (SarBot)",
-              class: "layer-box layer-surface block layer-tile-outline",
+              content: "SarBot was a semi-autonomous robotic project in my final year as an undergrad. The objective was to emulate a search and rescue (SaR) operation for a miner trapped underground.",
+              class: "layer-box layer-surface block layer-tile-outline tile-slidable",
               image: {
                 src: "cloudinary/joseph-projects/sarbot/3D_Modelling",
                 alt: "An image of a 3D model of Sarbot.",
@@ -90,7 +93,8 @@ block content
           +link("/projects/ultima-apparel")
             +tile({
               title: "Ultima Apparel",
-              class: "layer-box layer-surface block layer-tile-outline",
+              content: "Ultima Apparel was a company started to reduce the occurrence of lower back and shoulder injuries in labor intensive jobs using a motion capture wearable.",
+              class: "layer-box layer-surface block layer-tile-outline tile-slidable",
               image: {
                 src: "cloudinary/joseph-projects/ultima-apparel/Proof_of_Concept_1",
                 alt: "An image of Ultima Apparels first proof of concept.",
@@ -101,7 +105,8 @@ block content
           +link("/projects/phoenix")
             +tile({
               title: "Phoenix",
-              class: "layer-box layer-surface block layer-tile-outline",
+              content: "As part of my job as an engineering intern at Celestica, one of my projects was the design of a new solar panel frame cheaper and stronger than previous versions.",
+              class: "layer-box layer-surface block layer-tile-outline tile-slidable",
               image: {
                 src: "cloudinary/joseph-projects/phoenix/New_Solar_Panel_1-03",
                 alt: "An image of Joseph Ojo holding a large pane of Solar Panels.",
@@ -112,7 +117,8 @@ block content
           +link("/projects/publications")
             +tile({
               title: "Publications",
-              class: "layer-box layer-surface block layer-tile-outline",
+              content: "A list of publications I completed while studying for my masters at Ontario Tech University.",
+              class: "layer-box layer-surface block layer-tile-outline tile-slidable",
               image: {
                 src: "cloudinary/joseph-projects/publications/annie-spratt-_dAnK9GJvdY-unsplash",
                 alt: "An image of a set of papers laid on a table by Annie Spratt on Unsplash.",
