fix: update my footer link url

--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -19,4 +19,4 @@ mixin footer
 
       #design-by
         | Designed by 
-        +link("https://okikio.dev") Okiki Ojo
+        +link("https://blog.okikio.dev") Okiki Ojo
