--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -19,7 +19,8 @@ block content
           +image({
             src: "cloudinary/josephs_image",
             alt: "A portrait image of Joseph Ojo in a suit.",
-            overlay: false
+            overlay: false,
+            resizeImage: false
           })
         section
           .style-letter-head A
