--- a/src/pug/components/image.pug
+++ b/src/pug/components/image.pug
@@ -10,9 +10,11 @@ mixin image(value = {})
 
     let cloudinaryTest = /^cloudinary\//.test(src);
     let origin = `https://res.cloudinary.com/okikio-assets/image/${external ? "fetch" : "upload"}/`;
-    let urlParse = (filters = "w_auto") => cloudinaryTest ? `${origin + "f_auto,q_auto:best/c_fit," + filters},dpr_auto/${src.replace(/^cloudinary\//, "")}` : src;
 
-  .image&attributes(attributes)
+    let resizeImage = value.resizeImage;
+    let urlParse = (filters = "w_auto") => cloudinaryTest ? `${origin + "f_auto,q_" + (resizeImage ? "auto:best" : "100") + "/c_fit," + filters},dpr_auto/${src.replace(/^cloudinary\//, "")}` : src;
+
+  .image(resize-image!=`${resizeImage}`)&attributes(attributes)
     figure(class=_class title=alt)
       if overlay
         .image-overlay
