chore: update footer

--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -6,7 +6,7 @@ mixin footer
     .container
       #copyright
         +icon("copyright").icon
-        |  2021 Joseph Ojo
+        |  2022 Joseph Ojo
 
       #social-links.space-x-2
         +link("/sitemap") Sitemap
@@ -19,4 +19,4 @@ mixin footer
 
       #design-by
         | Designed by 
-        +link("https://blog.okikio.dev") Okiki Ojo
+        +link("https://okikio.dev") Okiki Ojo
