--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -3,7 +3,7 @@ mixin footer
     .container 
       p This website uses cookies for Analytics.
   .footer
-    .container
+    .footer-container
       #copyright
         +icon("copyright").icon
         |  2022 Joseph Ojo
