--- a/src/pug/components/navbar.pug
+++ b/src/pug/components/navbar.pug
@@ -9,7 +9,7 @@ mixin navbar(value = {})
   - let { url } = value;
   - let _class = value.class;
   - let tabs = ["about", "portfolio", "contact"];
-  - let projects = ["boxer", "battery-manager", "sarbot", "ultima-apparel", "phoenix", "publications"];
+  - let projects = ["li-ion-battery-pack", "boxer", "battery-manager", "sarbot", "ultima-apparel", "phoenix", "publications"];
 
   nav.navbar(aria-label="Main Navigation")
     .navbar-overlay
