--- a/src/pug/pages/projects/battery-manager.pug
+++ b/src/pug/pages/projects/battery-manager.pug
@@ -11,7 +11,7 @@ block pageInfo
 
 block banner
   +banner({
-    title: "Project 2: Battery Manager (2018 – Present)",
+    title: "Project 3: Battery Manager (2018 - 2021)",
     content: "The battery manager is a testing tool built to perform a multitude of experiments on battery cells and packs of different sizes.",
     image: {
       src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
@@ -28,6 +28,17 @@ block content
     br
     | The purpose of the battery manager has been to provide complete flexibility in the variety of research that I have, and future research colleagues will undertake. Compared to commercially available alternatives, this custom-built battery manager permits the ability to swap sensors, test a variety of battery packs, add auxiliary devices, develop complex algorithms and remotely monitor tests, all the while achieving a 5-10 times cost reduction. The manager started small. With a basic bench power supply and electronic load, it could only perform tests on one or two cells at a time, and since my thesis was to contribute to the battery field with a health-conscious fast-charging algorithm for a battery pack, an upgrade was crucial.
     br
+    br
+    +img-view({
+      src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
+      alt: "An image of the fully configured battery manager connected to a Lenovo Thinkpad laptop, for collecting data from."
+    })(width="860px" height="650px")
+    br
+    br
+    +img-view({
+      src: "cloudinary/joseph-projects/battery-manager/00Hardware-1",
+      alt: "An image of a top down view of the hardware that makes up the battery manager, with all the various wires, batteries and circuits being shown."
+    })(width="860px" height="645px")
     br
     | Before upgrading the system, however, we successfully completed several research projects. 
 
@@ -65,7 +76,7 @@ block content
     | .
     br
     br
-    |  Although a lot of work has gone into this project, there is still more to do to improve user experience. It is my goal to improve it further and support others that might need to use or improve on it.
+    |  Although a lot of work has gone into this project, there is still more to do to improve user experience. I am unfortunately no longer part of this project. Latest updates can be found at #[+link("https://github.com/LinlabResearch") Lin Lab’s GitHub account].
 
   //- Next page layer
   +next-page("Boxer", "SarBot")
