--- a/src/pug/pages/projects/phoenix.pug
+++ b/src/pug/pages/projects/phoenix.pug
@@ -11,8 +11,8 @@ block pageInfo
 
 block banner
   +banner({
-    title: "Project 5: Phoenix (2015 - 2016)",
-    content: "As part of my job as an engineering intern at Celestica, one of my projects was the design of a new solar panel frame cheaper and stronger than previous versions.",
+    title: "Project 6: Phoenix (2015 - 2016)",
+    content: "As part of my job as an engineering intern at Celestica, one of my projects was the design of a new solar panel frame cheaper and more reliable than previous versions.",
     image: {
       src: "cloudinary/joseph-projects/phoenix/New_Solar_Panel_1-03",
       alt: "An image of Joseph Ojo holding a large pane of Solar Panels.",
