--- a/src/pug/components/image.pug
+++ b/src/pug/components/image.pug
@@ -5,6 +5,7 @@ mixin image(value = {})
     let alt = value.alt || "Alternate text";
     let overlay = value.overlay ?? true;
 
+    let loading = value.loading ?? "lazy";
     let external = /\/fetch\//.test(source);
     let src = source.replace("fetch/", "");
 
@@ -18,7 +19,7 @@ mixin image(value = {})
     figure(class=_class title=alt)
       if overlay
         .image-overlay
-      img.placeholder-img(src!=`${urlParse("w_50,e_blur:500")}.jpg` alt=alt loading="lazy")
-      img.core-img(data-src!=`${urlParse()}.jpg` alt=alt loading="lazy" itemprop="url")
+      img.placeholder-img(src!=`${urlParse("w_50,e_blur:500")}.jpg` alt=alt loading=loading)
+      img.core-img(data-src!=`${urlParse()}.jpg` alt=alt loading=loading itemprop="url")
       noscript
-        img.no-script-img(src!=`${urlParse()}.jpg` aria-hidden="true" alt=alt loading="lazy")
+        img.no-script-img(src!=`${urlParse()}.jpg` aria-hidden="true" alt=alt loading=loading)
