--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -12,7 +12,7 @@ block pageInfo
 block content
   .navbar-top-spot
   .about-layer
-    .container
+    .contain
       h1.h4.text-center.font-600 Who am I?
       .clearfix
         .tile
