fix: lite-youtube not appearing properly

--- a/src/pug/pages/sitemap.pug
+++ b/src/pug/pages/sitemap.pug
@@ -32,6 +32,9 @@ block content
         //- Projects
         ul
           li
+            +link( "/projects/li-ion-battery-pack").italic.underline Lithium-ion Battery Pack
+            |   -  A mobile robotic battery pack which uses more than 200 Lithium-ion cells. It includes safety features, signal measurement, and cell balancing.
+          li
             +link( "/projects/boxer").italic.underline Boxer
             |   -  An autonomous robotic platform very similar to a conventional vehicle due to its ackerman steering design, and independent suspension.
           li
