--- a/src/pug/pages/projects/boxer.pug
+++ b/src/pug/pages/projects/boxer.pug
@@ -42,7 +42,7 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls preload="metadata" poster="https://res.cloudinary.com/okikio-assets/video/upload/v1623196482/joseph-projects/boxer/WheelAssembly_Edit.jpg" name='media' loading="lazy")
+      video.w-full(controls preload="none" poster="https://res.cloudinary.com/okikio-assets/video/upload/v1623196482/joseph-projects/boxer/WheelAssembly_Edit.jpg" name='media' loading="lazy")
         source(src='https://res.cloudinary.com/okikio-assets/video/upload/f_auto,q_auto/v1623196482/joseph-projects/boxer/WheelAssembly_Edit.mp4' type='video/mp4')
 
       figcaption.italic Vehicle Wheel Assembly
@@ -54,7 +54,7 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls preload="metadata"  poster="https://res.cloudinary.com/okikio-assets/video/upload/v1623362278/joseph-projects/boxer/Boxer_Moving.jpg"  name='media' loading="lazy")
+      video.w-full(controls preload="none"  poster="https://res.cloudinary.com/okikio-assets/video/upload/v1623362278/joseph-projects/boxer/Boxer_Moving.jpg"  name='media' loading="lazy")
         source(src='https://res.cloudinary.com/okikio-assets/video/upload/f_auto,q_auto/v1623362278/joseph-projects/boxer/Boxer_Moving.mp4' type='video/mp4')
 
       figcaption.italic Boxer on the move
@@ -64,7 +64,7 @@ block content
       //- video.w-full(controls preload="metadata"  poster="https://res.cloudinary.com/okikio-assets/video/upload/v1623362278/joseph-projects/boxer/Boxer_Moving.jpg"  name='media' loading="lazy")
       //-   source(src='https://res.cloudinary.com/okikio-assets/video/upload/f_auto,q_auto/v1623362278/joseph-projects/boxer/Boxer_Moving.mp4' type='video/mp4')
       lite-youtube.mx-auto(videoid="wAD9aOm3C_I" playlabel="Boxer on the move")
-      figcaption.italic Boxer on the move
+      figcaption.italic Boxer Promo Video
 
   //- Next page layer
   +next-page("Li-ion Battery Pack", "Battery Manager")
