--- a/src/pug/pages/projects/ultima-apparel.pug
+++ b/src/pug/pages/projects/ultima-apparel.pug
@@ -65,7 +65,7 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls preload="metadata" poster="https://res.cloudinary.com/okikio-assets/video/upload/joseph-projects/ultima-apparel/PostureAnalysis.jpg" name='media' loading="lazy")
+      video.w-full(controls preload="none" poster="https://res.cloudinary.com/okikio-assets/video/upload/joseph-projects/ultima-apparel/PostureAnalysis.jpg" name='media' loading="lazy")
         source(src='https://res.cloudinary.com/okikio-assets/video/upload/f_auto,q_auto/joseph-projects/ultima-apparel/PostureAnalysis.mp4' type='video/mp4')
 
       figcaption.italic Prototype Software
@@ -74,7 +74,7 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls preload="metadata" poster="https://res.cloudinary.com/okikio-assets/video/upload/joseph-projects/ultima-apparel/MoCapLimitedTest.jpg" name='media' loading="lazy")
+      video.w-full(controls preload="none" poster="https://res.cloudinary.com/okikio-assets/video/upload/joseph-projects/ultima-apparel/MoCapLimitedTest.jpg" name='media' loading="lazy")
         source(src='https://res.cloudinary.com/okikio-assets/video/upload/q_auto:low,vc_auto/joseph-projects/ultima-apparel/MoCapLimitedTest.mp4' type='video/mp4')
 
       figcaption.italic MoCap Development
