--- a/src/pug/components/image.pug
+++ b/src/pug/components/image.pug
@@ -12,14 +12,15 @@ mixin image(value = {})
     let cloudinaryTest = /^cloudinary\//.test(src);
     let origin = `https://res.cloudinary.com/okikio-assets/image/${external ? "fetch" : "upload"}/`;
 
-    let resizeImage = value.resizeImage;
+    let resizeImage = value.resizeImage ?? true;
     let urlParse = (filters = "w_auto") => cloudinaryTest ? `${origin + "f_auto,q_" + (resizeImage ? "auto:best" : "100") + "/c_fit," + filters},dpr_auto/${src.replace(/^cloudinary\//, "")}` : src;
 
-  .image(resize-image!=`${resizeImage}`)&attributes(attributes)
+  .image(resize-image=resizeImage)&attributes(attributes)
     figure(class=_class title=alt)
       if overlay
         .image-overlay
-      img.placeholder-img(src!=`${urlParse("w_50,e_blur:500")}.jpg` alt=alt loading=loading)
+      .placeholder-img
+        img(src!=`${urlParse("w_50,e_blur:500")}.jpg` alt=alt loading=loading)
       img.core-img(data-src!=`${urlParse()}.jpg` alt=alt loading=loading itemprop="url")
       noscript
         img.no-script-img(src!=`${urlParse()}.jpg` aria-hidden="true" alt=alt loading=loading)
