--- a/src/pug/components/img-view.pug
+++ b/src/pug/components/img-view.pug
@@ -6,12 +6,19 @@ mixin img-view(value = {})
     let external = /\/fetch\//.test(source);
     let src = source.replace("fetch/", "");
 
+    let loading = value.loading ?? "lazy";
+    let resizeImage = value.resizeImage ?? true;
+
     let cloudinaryTest = /^cloudinary\//.test(src);
     let origin = `https://res.cloudinary.com/okikio-assets/image/${external ? "fetch" : "upload"}/`;
     let urlParse = (filters = "w_auto") => cloudinaryTest ? `${origin + "q_auto:best,f_auto," + filters},dpr_auto/${src.replace(/^cloudinary\//, "")}` : src;
 
-  .img-view
+  .img-view(resize-image=resizeImage)
     figure.text-center
       .img-view-contain
-        img(src!=`${urlParse()}.jpg` alt=alt loading="lazy")&attributes(attributes)
+        .placeholder-img
+          img(src!=`${urlParse("w_50,e_blur:500")}.jpg` alt=alt loading=loading)
+        img.core-img(data-src!=`${urlParse()}.jpg` alt=alt loading=loading)&attributes(attributes)
+        noscript
+          img.no-script-img(src!=`${urlParse()}.jpg` aria-hidden="true" alt=alt loading=loading)&attributes(attributes)
       figcaption= alt
