--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -20,8 +20,8 @@ block content
             src: "cloudinary/josephs_image",
             alt: "A portrait image of Joseph Ojo in a suit.",
             overlay: false,
-            resizeImage: false
-          })
+            resizeImage: true
+          })(width="208" height="200")
         section
           .style-letter-head A
           | s the eldest of 4 children, I have picked up on several skills and philosophies including a natural inclination for leadership, a keen sense of responsibility, a strong ability to maintain peaceful interactions, and the continuous need to improve myself and surroundings. Interestingly, a recent professional development assessment (developed by Plum.io) places adaptation, teamwork, conflict resolution and innovation as some of my top talents. This, and many other projects I have led or collaborated on are also evidences of the skilled I have accrued thus far.
