--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -68,10 +68,17 @@ html(lang="en")
 
     script(src="/js/legacy.min.js", nomodule async)
     script(src="/js/modern.min.js", type="module" async)
+
+    script.
+      partytown = {
+        "forward": ["dataLayer.push"]
+      };
+    script!=self.partytownSnippet
     
     // Global site tag (gtag.js) - Google Analytics
-    script(src='https://www.googletagmanager.com/gtag/js?id=G-235NHS61W0' defer)
-    script(src='/js/measurements.min.js' defer)
+    script(src='https://www.googletagmanager.com/gtag/js?id=G-235NHS61W0' type="text/partytown" defer crossorigin)
+    script(src='/js/umami.min.js' type="text/partytown" defer crossorigin)
+    script(src='/js/measurements.min.js' type="text/partytown" defer crossorigin)
 
     script(type="application/ld+json" defer).
       {
